--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="bg-black ">
+<body class="powder blue">
   <div class="head">
     <nav class="navbar navbar-expand-lg bg-blac">
       <div class="container-fluid headd bg-black text-white">
@@ -131,7 +131,7 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid bg-black text-white">
+  <div class="container-fluid powder-blue text-white">
 
 
     <div class="row">
